1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Default to 1998-08-17.
	Include Makefile.appl from $(SWARMHOME)/etc/swarm.	

1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* BankObserverSwarm.m: Include analysis.h.

	* BankObserverSwarm.h (BankObserverSwarm): Instead of being
	statically typed, make investorEntropy,
	and borrowerEntropy objects that conform to the analysis 
	Entropy protocol.

1998-04-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* BankBatchSwarm.m: Include activity.h instead of collections.h.

	* BankBatchSwarm.h: Don't include objectbase.h, activity.h,
	collections.h, simtools.h, or stdio.h.  Include objectbase/Swarm.h.

	* BankModelSwarm.h: Include objectbase/Swarm.h instead of
	objectbase.h.

1998-03-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* BLink.[hm], BankBatchSwarm.[hm], BankModelSwarm.[hm],
	BankObserverSwarm.[hm], FEntity.[hm], FLink.[hm], FNet.[hm],
	ILink.[hm], main.m: Add copyright headers.  Minor reformatting.

1998-03-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ILink.m: Don't Include tkobjc.h.  Reformatting throughout.

	* FNet.m: Don't include string.h, stdio.h, stdlib.h, or tkobjc.h.

1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* FEntity.[hm]: (investingIn:borrowingFrom:,incident) now return BOOL.
	Constify argument to setEntityName:.

	* FEntity.m: Don't include string.h, stdio.h, stdlib.h,
	tkobjc.h, or simtools.h.

	* BankObserverSwarm.m: Don't include collections.h or objectbase.h.
	Include simtoolsgui.h.

	* BankObserverSwarm.h: Don't include objectbase.h, activity.h,
	collections.h, simtools.h, or gui.h.  Include simtoolsgui.h
	and simtools/GUISwarm.h.

	* BankModelSwarm.m: Don't include stdlib.h or simtools.h.  Include
	random.h and misc.h.
	([BankModelSwarm +createBegin:]): Use YES instead of 1 for
	setHideResult.
	Reformatting throughout.

	* BankModelSwarm.h: Don't include activity.h or collections.h.
	Reformatting throughout.
