@@ -1,7 +1,11 @@
+1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Makefile (SWARMHOME): Default to 1998-08-20.
+	(OTHERCLEAN): banks.data, not bank.data.
+
 1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
-	* Makefile (SWARMHOME): Default to 1998-08-17.
-	Include Makefile.appl from $(SWARMHOME)/etc/swarm.	
+	* Makefile: Include Makefile.appl from $(SWARMHOME)/etc/swarm.	
 
 1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
